--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@ layout: default
       <ul class="tabs">
         <li class="tabs__item">Posts
         <li class="tabs__item">Categories</li>|
-		<a href="/category/c/">C#</a>
-		<a href="/category/f/">F#</a>
+		<!-- <a href="/category/c/">C#</a> -->
+		<!-- <a href="/category/f/">F#</a> -->
 		<a href="/feed.xml">RSS</a>
       </ul>
     </header>
