--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@ layout: default
     <header>
       <ul class="tabs">
         <li class="tabs__item">Posts
-        <li class="tabs__item">Categories</li>|
+        <!-- <li class="tabs__item">Categories</li>| -->
 		<!-- <a href="/category/c/">C#</a> -->
 		<!-- <a href="/category/f/">F#</a> -->
-		<a href="/feed.xml">RSS</a>
+		|<a href="/feed.xml">RSS</a>
       </ul>
     </header>
 
