--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@ layout: default
   <div>
     <header>
       <ul class="tabs">
-        <li class="tabs__item">Posts
+        <li class="tabs__item">Posts</li>|
         <!-- <li class="tabs__item">Categories</li>| -->
 		<!-- <a href="/category/c/">C#</a> -->
 		<!-- <a href="/category/f/">F#</a> -->
-		|<a href="/feed.xml">RSS</a>
+		<a href="/feed.xml">RSS</a>
       </ul>
     </header>
 
