--- a/csharp.html
+++ b/csharp.html
@@ -2,13 +2,13 @@
 layout: default
 title: C#
 description:
-permalink: /blog/csharp/ 
+permalink: /category/csharp/ 
 ---
 <section class="previews">
   <div>
     <a class="nav nav--white" href="{{ site.baseurl }}/">
       <i class="fa fa-lg fa-arrow-left"></i>
-      <span>Back to Posts</span>
+      <span>Back to Posts {{ page.url.params.foo }}</span>
     </a>
     {% for post in site.categories[page.title] %}
       <figure class="absolute-bg preview__img" style="background-image: url('{{ post.image }}');"></figure>
