--- a/jekyll.html
+++ b/jekyll.html
@@ -1,14 +1,14 @@
 ---
 layout: default
-title: F#
-description: 
-permalink: /category/fsharp/
+title: Jekyll
+description:
+permalink: /category/csharp/ 
 ---
 <section class="previews">
   <div>
     <a class="nav nav--white" href="{{ site.baseurl }}/">
       <i class="fa fa-lg fa-arrow-left"></i>
-      <span>Back to Posts</span>
+      <span>Back to Posts {{ page.url.params.foo }}</span>
     </a>
     {% for post in site.categories[page.title] %}
       <figure class="absolute-bg preview__img" style="background-image: url('{{ post.image }}');"></figure>
