--- a/asp-net-core.html
+++ b/asp-net-core.html
@@ -2,7 +2,7 @@
 layout: default
 title: ASP.NET Core
 description:
-permalink: /category/csharp/ 
+permalink: /category/asp-net-core/ 
 ---
 <section class="previews">
   <div>
