--- a/asp-net.html
+++ b/asp-net.html
@@ -2,7 +2,7 @@
 layout: default
 title: ASP.NET
 description:
-permalink: /category/csharp/ 
+permalink: /category/asp-net/ 
 ---
 <section class="previews">
   <div>
