--- a/dapper.html
+++ b/dapper.html
@@ -2,7 +2,7 @@
 layout: default
 title: Dapper
 description:
-permalink: /category/csharp/ 
+permalink: /category/dapper/ 
 ---
 <section class="previews">
   <div>
