--- a/jekyll.html
+++ b/jekyll.html
@@ -2,7 +2,7 @@
 layout: default
 title: Jekyll
 description:
-permalink: /category/csharp/ 
+permalink: /category/jekyll/ 
 ---
 <section class="previews">
   <div>
