--- a/linq.html
+++ b/linq.html
@@ -2,7 +2,7 @@
 layout: default
 title: LINQ
 description:
-permalink: /category/csharp/ 
+permalink: /category/linq/ 
 ---
 <section class="previews">
   <div>
