--- a/nuget.html
+++ b/nuget.html
@@ -2,7 +2,7 @@
 layout: default
 title: NuGet
 description:
-permalink: /category/csharp/ 
+permalink: /category/nuget/ 
 ---
 <section class="previews">
   <div>
