--- a/sharpening-f.html
+++ b/sharpening-f.html
@@ -2,7 +2,7 @@
 layout: default
 title: Sharpening F#
 description:
-permalink: /category/csharp/ 
+permalink: /category/sharpening-f/ 
 ---
 <section class="previews">
   <div>
