--- a/csharp.html
+++ b/csharp.html
@@ -2,7 +2,7 @@
 layout: default
 title: C#
 description:
-permalink: /category/csharp/ 
+permalink: /category/c/ 
 ---
 <section class="previews">
   <div>
