--- a/fsharp.html
+++ b/fsharp.html
@@ -2,7 +2,7 @@
 layout: default
 title: F#
 description: 
-permalink: /category/fsharp/
+permalink: /category/f/
 ---
 <section class="previews">
   <div>
