--- a/electricity.html
+++ b/electricity.html
@@ -10,6 +10,14 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js"
         integrity="sha512-STof4xm1wgkfm7heWqFJVn58Hm3EtS31XFaagaa8VMReCXAkQnJZ+jEy8PCC/iT18dFy95WcExNHFTqLyp72eQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-99549583-2"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-99549583-2');
+    </script>
 </head>
 
 <body>
@@ -486,10 +494,10 @@
                         </div>
                     </div>
                 </div>
-                <a href="http://mirchetoshevski.net/" >Homepage</a>
+                <a href="http://mirchetoshevski.net/">Homepage</a>
             </div>
         </div>
-        
+
     </div>
 </body>
 
