--- a/electricity.html
+++ b/electricity.html
@@ -473,13 +473,13 @@
                             </div>
 
                             <div class="md:col-span-1">
-                                <label for="full_name">ВТ + НТ + ДДВ</label>
+                                <label for="full_name">ВТ + НТ + Транспорт</label>
                                 <input type="number" name="totalHPlusLPlusPDV" id="totalHPlusLPlusPDV"
                                     class="h-10 border mt-1 rounded px-4 w-full bg-gray-50" disabled />
                             </div>
 
                             <div class="md:col-span-1 text-amber-400">
-                                <label for="full_name">Вкупно</label>
+                                <label for="full_name">Вкупно + ДДВ</label>
                                 <input type="number" name="total" id="total"
                                     class="h-10 border mt-1 rounded px-4 w-full bg-gray-50" disabled />
                             </div>
