--- a/mixes.html
+++ b/mixes.html
@@ -162,6 +162,17 @@
                 <a href="https://www.mixcloud.com/neeemesis/session-14/" target="_blank">Session #14</a>
                 <a href="https://www.mixcloud.com/neeemesis/session-13/" target="_blank">Session #13</a>
                 <a href="https://www.mixcloud.com/neeemesis/session-12/" target="_blank">Session #12</a>
+                <a href="https://www.mixcloud.com/neeemesis/session-4/" target="_blank">Session #11</a>
+                <a href="https://www.mixcloud.com/neeemesis/session-3/" target="_blank">Session #10</a>
+                <a href="https://www.mixcloud.com/neeemesis/session-2/" target="_blank">Session #9</a>
+                <a href="https://www.mixcloud.com/neeemesis/session-1/" target="_blank">Session #8</a>
+                <a href="https://www.mixcloud.com/neeemesis/session-7/" target="_blank">Session #7</a>
+                <a href="https://www.mixcloud.com/neeemesis/session-6/" target="_blank">Session #6</a>
+                <a href="https://www.mixcloud.com/neeemesis/session-5/" target="_blank">Session #5</a>
+                <a href="https://www.mixcloud.com/neeemesis/session-11/" target="_blank">Session #4</a>
+                <a href="https://www.mixcloud.com/neeemesis/session-10/" target="_blank">Session #3</a>
+                <a href="https://www.mixcloud.com/neeemesis/session-9/" target="_blank">Session #2</a>
+                <a href="https://www.mixcloud.com/neeemesis/session-8/" target="_blank">Session #1</a>
         </div>
 </body>
 
