--- a/mixes.html
+++ b/mixes.html
@@ -101,6 +101,14 @@
                         place-items: center;
                 }
         </style>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-99549583-2"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag() { dataLayer.push(arguments); }
+            gtag('js', new Date());
+    
+            gtag('config', 'UA-99549583-2');
+        </script>
 </head>
 
 <body>
