--- a/mixes.html
+++ b/mixes.html
@@ -101,13 +101,13 @@
                         place-items: center;
                 }
         </style>
-        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-99549583-2"></script>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-K2XJPRV49W"></script>
         <script>
-            window.dataLayer = window.dataLayer || [];
-            function gtag() { dataLayer.push(arguments); }
-            gtag('js', new Date());
-    
-            gtag('config', 'UA-99549583-2');
+                window.dataLayer = window.dataLayer || [];
+                function gtag() { dataLayer.push(arguments); }
+                gtag('js', new Date());
+
+                gtag('config', 'G-K2XJPRV49W');
         </script>
 </head>
 
