--- a/electricity.html
+++ b/electricity.html
@@ -494,7 +494,7 @@
                         </div>
                     </div>
                 </div>
-                <a href="http://mirchetoshevski.net/">Homepage</a>
+                <a href="https://mirchetoshevski.net/">Homepage</a>
             </div>
         </div>
 
