--- a/colorpicker.html
+++ b/colorpicker.html
@@ -12,19 +12,17 @@
 </head>
 
 <body>
-	<div id="parent" style="width: 100%; height: 100vh;"></div>
+	<div id="parent" style="width: 800px; height: 800px;"></div>
 
 	<script>
-		// Create a new Picker instance and set the parent element.
-		// By default, the color picker is a popup which appears when you click the parent.
 		var parent = document.querySelector('#parent');
 		var picker = new Picker(parent);
 		picker.setOptions({
 			popup: false
 		});
+		picker.setColor("#fef16cff");
 		picker.show();
 
-		// You can do what you want with the chosen color using two callbacks: onChange and onDone.
 		picker.onDone = function(color) {
 			const queryString = window.location.search.replace("?location=", "");
 			console.log(queryString + "_" + color.hex);
