--- a/thermometer.html
+++ b/thermometer.html
@@ -136,7 +136,7 @@
         </text>
         <g class="dial__control">
           <circle class="dial__track" cx="50%" cy="50%" r="152" stroke="url(#linear)" />
-          <circle id="temp-handle" class="dial__dot" cx="48" cy="50%" r="8" stroke="transparent" stroke-width="20">
+          <circle id="temp-handle" class="dial__dot" cx="48" cy="50%" r="25" stroke="transparent" stroke-width="20">
         </g>
       </svg>
     </div>
@@ -154,6 +154,8 @@
 
     let origin = calculateRotationOrigin();
     let rotating = false;
+
+    updateDial(360 / (maxTemp - minTemp) * (parseFloat(tempDisplay.innerHTML) - minTemp) + 90);
 
     // Find the center of the dial to use as rotation origin.
     function calculateRotationOrigin() {
@@ -219,6 +221,7 @@
       const angle = Math.atan2(y - origin.y, x - origin.x);
       const angleDegrees = 180 + angle * 180 / Math.PI;
       updateDial(angleDegrees);
+      console.log(angleDegrees);
     }
 
     // Update dial text and CSS custom properties to display the new state
