--- a/urlqr.html
+++ b/urlqr.html
@@ -1,10 +1,10 @@
 <html>
 
 <head>
-    <title>URL QR Code Generator</title>
-    <meta name="description" content="URL QR Code Generator">
+    <title>URL to QR Code Convertor</title>
+    <meta name="description" content="URL to QR Code Convertor">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="og:title" property="og:title" content="URL QR Code Generator">
+    <meta name="og:title" property="og:title" content="URL to QR Code Convertor">
     <meta name="keywords" content="url, qr code, generator">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js"
@@ -33,7 +33,7 @@
 
                             <div class="md:col-span-6 relative flex py-5 items-center">
                                 <div class="flex-grow border-t border-gray-400"></div>
-                                <span class="flex-shrink mx-4 text-gray-400">URL QR Code Generator</span>
+                                <span class="flex-shrink mx-4 text-gray-400">URL to QR Code Convertor</span>
                                 <div class="flex-grow border-t border-gray-400"></div>
                             </div>
 
