--- a/urlqr.html
+++ b/urlqr.html
@@ -60,8 +60,6 @@
 
 <script>
     $(document).ready(function () {
-        document.getElementById('urlEntered').value = "http://mirchetoshevski.net/";
-
         $('#urlEntered').on('input', function (e) {
             calculate();
         });
@@ -77,7 +75,7 @@
         document.getElementById('qrcode').innerHTML = '';
 
         // Generate the QR code
-        new QRCode(document.getElementById('qrcode'), url);
+        new QRCode(document.getElementById('qrcode'), url ? url : "http://mirchetoshevski.net/");
     }
 </script>
 
