added missing entry

--- a/mixes.html
+++ b/mixes.html
@@ -164,6 +164,7 @@
                 <a href="https://www.mixcloud.com/neeemesis/session-20/" target="_blank">Session #20</a>
                 <a href="https://www.mixcloud.com/neeemesis/session-19/" target="_blank">Session #19</a>
                 <a href="https://www.mixcloud.com/neeemesis/session-18/" target="_blank">Session #18</a>
+                <a href="https://www.mixcloud.com/neeemesis/shlageri-1/" target="_blank">Shlageri #1</a>
                 <a href="https://www.mixcloud.com/neeemesis/session-17/" target="_blank">Session #17</a>
                 <a href="https://www.mixcloud.com/neeemesis/session-16/" target="_blank">Session #16</a>
                 <a href="https://www.mixcloud.com/neeemesis/session-15/" target="_blank">Session #15</a>
