edit event html

--- a/editEvent.html
+++ b/editEvent.html
@@ -109,7 +109,7 @@
 
             <div>
                 <label for="DateParsed">Date Parsed</label>
-                <input id="DateParsed" name="DateParsed" type="text" placeholder="Parsed date value" />
+                <input id="DateParsed" name="DateParsed" type="datetime-local" step="1" placeholder="Parsed date value" />
             </div>
 
             <div style="display:flex;gap:.5rem;align-items:center">
