--- a/editProvider.html
+++ b/editProvider.html
@@ -94,6 +94,11 @@
             </div>
 
             <div>
+                <label for="Category">Category</label>
+                <input id="Category" name="Category" type="text" placeholder="e.g. Festival" />
+            </div>
+
+            <div>
                 <label for="Url">URL</label>
                 <input id="Url" name="Url" type="text" placeholder="e.g. https://example.com/event" />
             </div>
@@ -130,6 +135,7 @@
             "CountryIso2",
             "City",
             "Type",
+            "Category",
             "Url",
             "ImageUrl",
             "Longitude",
